--- a/app/src/main/res/layout/activity_recover_password.xml
+++ b/app/src/main/res/layout/activity_recover_password.xml
@@ -215,7 +215,8 @@
                     android:textSize="16sp"
                     android:textStyle="bold"
                     android:text="Verificar Código"
-                    app:rippleColor="?attr/colorControlHighlight"/>
+                    app:rippleColor="?attr/colorControlHighlight"
+                    android:backgroundTint="@color/green"/>
 
 
             </LinearLayout>
@@ -258,7 +259,8 @@
                     android:textSize="16sp"
                     android:textStyle="bold"
                     android:text="Enviar Solicitação"
-                    app:rippleColor="?attr/colorControlHighlight"/>
+                    app:rippleColor="?attr/colorControlHighlight"
+                    android:backgroundTint="@color/green"/>
 
                 <TextView
                     android:layout_width="match_parent"
@@ -345,7 +347,8 @@
                     android:layout_height="60dp"
                     android:text="Alterar minha senha"
                     android:textStyle="bold"
-                    android:layout_marginTop="10dp"/>
+                    android:layout_marginTop="10dp"
+                    android:backgroundTint="@color/green"/>
 
             </LinearLayout>
         </LinearLayout>
